finished what up

--- a/app/templates/c.html
+++ b/app/templates/c.html
@@ -12,8 +12,51 @@
 
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
+		<style type="text/css">
+
+
+			.flex-container {
+			padding:0;
+			margin: 0;
+			list-style: none;
+
+			
+			display: -webkit-box;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+
+			/* align-items: center; */
+			
+			-webkit-flex-flow: row wrap;
+			justify-content: center;
+			}
+
+			.flex-item {
+			background: orange;
+			padding: 0px;
+			width: 100%;
+			height: 150px;
+			margin-top: 60px;
+			/* margin-right: 100px;
+			margin-left: 100px; */
+			}
+	
+	
+		</style>
 	</head>
-	<body>
+	<body style="background-color: purple; text-align:center">
+		<ul class="flex-container">
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<!-- <li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li> -->
+				</ul>
 		<!-- Your layout here -->
 
 	</body>
