--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -9,12 +9,61 @@
 		<link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="{% static '/vendors/bootstrap/css/bootstrap.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
-
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
+
+		<style type="text/css">
+
+
+			.flex-container {
+			padding:0;
+			margin: 0;
+			list-style: none;
+
+			
+			display: -webkit-box;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+
+			/* align-items: center; */
+			
+			-webkit-flex-flow: row wrap;
+			justify-content: space-around;
+			}
+
+			.flex-item {
+			background: orange;
+			padding: 0px;
+			width: 250px;
+			height: 150px;
+			margin-top: 10px;
+			/* margin-right: 100px;
+			margin-left: 100px; */
+			
+			/* line-height: 5px;
+			color: white;
+			font-weight: bold;
+			font-size: 3em;
+			text-align: center; */
+			}
+	
+	
+		</style>
 	</head>
-	<body>
+	<body style="background-color: purple; text-align:center">
 		<!-- Your layout here -->
+		<ul class="flex-container">
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+		  </ul>
 
 	</body>
 </html>
