--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -12,9 +12,51 @@
 
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
-	</head>
-	<body>
-		<!-- Your layout here -->
+		<style type="text/css">
 
+
+			.flex-container {
+			padding:0;
+			margin: 0;
+			list-style: none;
+
+			
+			display: -webkit-box;
+			display: -moz-box;
+			display: -ms-flexbox;
+			display: -webkit-flex;
+			display: flex;
+
+			/* align-items: center; */
+			
+			-webkit-flex-flow: row wrap;
+			justify-content: space-around;
+			}
+
+			.flex-item {
+			background: orange;
+			padding: 0px;
+			width: 220px;
+			height: 150px;
+			margin-top: 100px;
+			/* margin-right: 100px;
+			margin-left: 100px; */
+			}
+	
+	
+		</style>
+	</head>
+	<body style="background-color: purple; text-align:center">
+		<!-- Your layout here -->
+		<ul class="flex-container">
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<li class="flex-item"></li>
+			<!-- <li class="flex-item"></li> -->
+			<!-- <li class="flex-item"></li> -->
+		  </ul>
 	</body>
 </html>
