--- a/app/templates/e.html
+++ b/app/templates/e.html
@@ -13,8 +13,63 @@
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
 	</head>
-	<body>
-		<!-- Your layout here -->
+	<style type="text/css">
 
+
+		.flex-container {
+		padding:0;
+		margin: 0;
+		list-style: none;
+
+		
+		display: -webkit-box;
+		display: -moz-box;
+		display: -ms-flexbox;
+		display: -webkit-flex;
+		display: flex;
+
+		/* align-items: center; */
+		
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
+		justify-content: space-evenly;
+		}
+
+		.flex-item {
+		background: orange;
+		padding: 5px;
+		width: 200px;
+		height: 150px;
+		margin-top: 10px;
+		margin-bottom: 10px; 
+		margin-right: 10px;
+		margin-left: 10px;
+		
+		/* line-height: 5px;
+		color: white;
+		font-weight: bold;
+		font-size: 3em;
+		text-align: center; */
+		}
+	</style>
+	<body style="background-color: purple; text-align:center">
+			<!-- Your layout here -->
+			<ul class="flex-container">
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+				<li class="flex-item"></li>
+			  </ul>
 	</body>
 </html>
